mine products, edit store and laws css lang

--- a/views/store.html
+++ b/views/store.html
@@ -168,19 +168,26 @@
                     <button class="buy-button" onclick="addToCart('×1 Netherite', 1200)">خرید</button>  
                 </div>  
                 <div class="product" data-category="resources">  
-                    <img src="/images/resource3.png" alt="منبع 3">  
-                    <h3>منبع 3</h3>  
-                    <p>توضیحات درباره منبع 3</p>  
+                    <img src="/public/images/Iron-Ingot.jpg" alt="Iron Ingot">  
+                    <h3>Iron Ingot</h3>  
+                    <p>×32 Iron Ingot</p>
                     <span class="price">90 CYT</span>  
-                    <button class="buy-button" onclick="addToCart('منبع 3', 90)">خرید</button>  
+                    <button class="buy-button" onclick="addToCart('×32 Iron Ingot', 90)">خرید</button>  
                 </div>  
                 <div class="product" data-category="resources">  
-                    <img src="/images/resource4.png" alt="منبع 4">  
-                    <h3>منبع 4</h3>  
-                    <p>توضیحات درباره منبع 4</p>  
+                    <img src="/public/images/Gold-Ingot.jpg" alt="GOld Ingot">  
+                    <h3>Gold Ingot</h3>  
+                    <p>×1 Gold Ingot</p>  
                     <span class="price">125 CYT</span>  
-                    <button class="buy-button" onclick="addToCart('منبع 4', 125)">خرید</button>  
+                    <button class="buy-button" onclick="addToCart('×1 Gold Ingot', 125)">خرید</button>  
                 </div>  
+                <div class="product" data-category="resources">
+                    <img src="/public/images/Copper-Ingot.jpg" alt="Copper Ingot">
+                    <h3>Copper Ingot</h3>
+                    <p>×32 Copper Ingot</p>
+                    <span class="price">200 CYT</span>
+                    <button class="buy-button" onclick="addToCart('×32 Copper Ingot', 200)">خرید</button>
+                </div>
 
 
                 <!-- محصولات جمع آوری -->
