--- a/views/laws.html
+++ b/views/laws.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CityWar | </title>
+    <title>CityWar | Laws </title>
+
+    <link rel="stylesheet" href="/public/css/laws.css">
+
 </head>
 <body>
     
