--- a/views/laws.html
+++ b/views/laws.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     
-    <ol>
-        <li>fdksk</li>
-        <li>fvmdk</li>
-    </ol>
+    <article>
+        <ol>
+            <li>روند خرید شما مانند خرید از فروشگاه های اینترنتی دیگر میباشد. یعنی شما بعد از افزودن محصول به سبد خرید و سپس پرداخت هزینه سفارش، سفارش شما ثبت میشود و در مدت زمان مشخص شده،انجام میشود</li>
+            <li></li>
+        </ol>
+    </article>
 
 </body>
 </html>
