add a text for CYT amount

--- a/public/css/store.css
+++ b/public/css/store.css
@@ -12,7 +12,7 @@ header {
     text-align: center;  
     position: fixed;
     width: 100%; 
-    font-family: none;
+    font-family:'Arial', sans-serif;
 }  
 
 header h1 {  
@@ -24,7 +24,7 @@ header h1 {
 nav {  
     margin: 10px 0;  
     display: flex;  
-    font-family: none;
+    font-family:'Arial', sans-serif;
     gap: 7px; /* فاصله بین لینک‌ها */
 }  
 
