--- a/views/store.html
+++ b/views/store.html
@@ -19,7 +19,7 @@
         </nav>  
     </header> 
     
-        
+    
     
     <main>  
         <section class="categories">  
@@ -47,7 +47,11 @@
             </div>  
             
             
-        </section>  
+        </section> 
+        
+        <article>
+    <p style="color: rgb(49, 121, 10);">Note: The price of each CYT is around $0.001. That is, every 1000CYT is equal to $1.</p>
+        </article> 
 
         <div class="search-box">
 
@@ -249,6 +253,16 @@
                     <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Golden Axe' , 250)">خرید</button>  
                 </div>
                 
+
+                <!-- کیت ها -->
+                    <div class="product" data-category="kits" title="Sharpness I">  
+                        <img src="/public/images/Netherite-Kit.jpg" alt="Netherite Kit  Sword">
+                        <h3>Netherite Kit</h3>
+                        <p>Level.1</p>
+                        <span class="price">50,000 CYT</span>
+                        <button class="buy-button" onclick="addToCart('Enchanted Lv.1 Diamond Sword', 50000)">خرید</button>  
+                    </div>  
+
 
                 <!-- محصولات متفرقه -->  
                 <div class="product" data-category="misc">  
