add icon on site

--- a/views/events.html
+++ b/views/events.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citywar | ایونت ها</title>
 
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="/public/css/events.css">
 </head>
 <body>
@@ -16,6 +18,8 @@
                 <a href="store.html">بازگشت به فروشگاه</a>
             </nav>  
         </header> 
+
+
 
 </body>
 </html>
