--- a/views/reportproblem.html
+++ b/views/reportproblem.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityWar | Report Problems</title>
+
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+    
 </head>
 <body>
     
