--- a/views/signup.html
+++ b/views/signup.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/signup.css">
     <title> ثبت نام | Citywar </title>
+
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+    
 </head>
 <body>
 
