--- a/views/store.html
+++ b/views/store.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/public/css/store.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">  
     <title>فروشگاه | CityWar</title>  
+
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+
 </head>  
 <body>  
     <header>  
