--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="/public/css/styles.css">  
+
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+
     <title>CityWar</title>  
 </head>  
 <body>  
