--- a/views/profile.html
+++ b/views/profile.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityWar | پروفایل</title>
 
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="/public/css/profile.css">
 </head>
 <body>
