--- a/views/wallet.html
+++ b/views/wallet.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>مدیریت کیف پول</title>  
+
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="/public/css/wallet.css"> <!-- استایل‌های مشترک -->  
     <script src="scripts.js" defer></script>  
 </head>  
