--- a/public/css/wallet.css
+++ b/public/css/wallet.css
@@ -62,53 +62,6 @@ main {
     transition: background-color 0.3s;  
 }  
 
-.category:hover {  
-    background-color: #e68a00; /* تغییر رنگ در هاور */  
-}  
-
-.product-list {  
-    margin-top: 20px;  
-}  
-
-.products {  
-    display: flex;  
-    flex-wrap: wrap; /* اجازه به محصولات برای شکست به خطوط جدید */  
-    justify-content: center; /* مرکز کردن محصولات */  
-}  
-
-.product {  
-    background-color: white;  
-    border-radius: 10px;  
-    width: 200px;  
-    padding: 15px;  
-    margin: 10px;  
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);  
-    transition: transform 0.2s;  
-}  
-
-.product img {  
-    width: 100%;  
-    border-radius: 5px;  
-}  
-
-.product h3 {  
-    text-align: center;  
-    color: #333;  
-}  
-
-.product p {  
-    font-size: 0.9em;  
-    text-align: center;  
-    color: #666;  
-}  
-
-.price {  
-    font-size: 1.2em;  
-    text-align: center;  
-    margin: 10px 0;  
-    color: #4CAF50; /* سبز */  
-}  
-
 .buy-button {  
     background-color: #4CAF50; /* سبز */  
     color: white;  
@@ -220,7 +173,7 @@ input[type="number"] {
 button{
     padding: 7px 15px;
     border-radius: 5px;
-    background-color: #90EE90;
+    background-color: #62dd62;
 }
 
 button:hover{
@@ -236,7 +189,7 @@ button:hover{
     border-radius: 7px;
     /* border: 6px outset #84e684; */
     border: 6px outset #666;
-    color: #4ce94c;
+    color: #31e531;
 }
 
 main #wallet-info{
