--- a/views/wallet.html
+++ b/views/wallet.html
@@ -21,8 +21,13 @@
 
     <main>  
         <section id="wallet-info">
+            <article>
+            <h2>موجودی به دلار: </h2> <span id="wallet-dollar">0</span>
+            <hr>
+            </article>
             <article>  
             <h2>موجودی کیف پول:  </h2> <span id="wallet-balance">0</span> 
+            <hr>
             </article>
             <input type="number" id="amount" placeholder="مقدار شارژ" />  
             <button onclick="chargeWallet()">شارژ کیف پول</button>  
