--- a/views/wallet.html
+++ b/views/wallet.html
@@ -12,7 +12,7 @@
 </head>  
 <body>  
     <header>  
-        <span>Wallet</span>  
+        <span><strong>Wallet</strong></span>  
         <nav>  
             <a href="index.html">صفحه اصلی</a> <!-- لینک به صفحه اصلی -->  
             <a href="./store.html">بازگشت به فروشگاه</a>
