--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,9 @@
     <header>  
         <h1>CityWar</h1>  
         <nav>  
-            <a href="signup.html">ثبت نام</a>  
-            <a href="login.html">ورود</a>  
-            <a href="store.html">فروشگاه</a>  
+            <a href="signup.html">signup</a>  
+            <a href="login.html">Login</a>  
+            <a href="store.html">Store</a>  
         </nav>  
     </header>  
     
