--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {  
-    /* font-family: Arial, sans-serif; */
+    font-family: Arial, sans-serif;
     margin: 0;  
     padding: 0;  
     background-color: #f4f4f4;  
@@ -17,13 +17,13 @@ header {
 header h1 {  
     margin: 0; 
     display: flex;  
-    gap: 7px; /* فاصله بین لینک‌ها */ 
+    gap: px; /* فاصله بین لینک‌ها */ 
 }  
 
 nav{
     margin: 10px 0;  
     display: flex;  
-    gap: 7px; /* فاصله بین لینک‌ها */
+    gap: 2px; /* فاصله بین لینک‌ها */
 }
 
 nav a {  
