change language and edit font style in events page

--- a/views/events.html
+++ b/views/events.html
@@ -13,9 +13,9 @@
 
         <header>  
             <nav>  
-                <a href="index.html">صفحه اصلی</a>
-                <a href="profile.html">پروفایل</a>
-                <a href="store.html">بازگشت به فروشگاه</a>
+                <a href="index.html">Main Menu</a>
+                <!-- <a href="profile.html">Profile</a> -->
+                <a href="store.html">Back To Store</a>
             </nav>  
         </header> 
 
