--- a/views/laws.html
+++ b/views/laws.html
@@ -14,7 +14,7 @@
     
     <article>
         <ol>
-            <li>روند خرید شما مانند خرید از فروشگاه های اینترنتی دیگر میباشد. یعنی شما بعد از افزودن محصول به سبد خرید و سپس پرداخت هزینه سفارش، سفارش شما ثبت میشود و در مدت زمان مشخص شده،انجام میشود</li>
+            <li>Your purchase process is similar to shopping from other online stores. That is, after you add the product to the shopping cart and then pay for the order, your order will be registered and processed within the specified time period.</li>
             <li></li>
         </ol>
     </article>
