--- a/views/index.html
+++ b/views/index.html
@@ -18,17 +18,30 @@
             <a href="store.html">Store</a>  
         </nav>  
     </header>  
+
+    <section id="containers1">
+    <div class="container">  
+        <h1>آخرین مقالات</h1>  
+        <div class="articles-row" id="articlesRow">  
+          <!-- مقالات با JS اضافه می شوند -->  
+        </div>  
+      </div>  
+    </section>
+      
     
     <main>  
-        <h2>معرفی</h2> 
-        <p>با اولین و بزرگترین مجموعه سرور های سیتی وار آشنا شوید</p>
-        <p>از طریق سرور های ما به راحتی کسب درآمد کنید</p> 
-        <p>سرور CityWar بهترین تجربه را برای شما به ارمغان می‌آورد</p>
+        <h2>Introduce</h2> 
+        <p>Meet the first and largest collection of CityWar servers.</p>
+        <p>Easily earn money through our servers.</p> 
+        <p>CityWar server brings you the best experience.</p>
     </main>  
     <footer>  
-        <p>&copy; 2025 CityWar</p>  
+        <p>&copy;2025 CityWar. All rights reserved.</p>
     </footer>  
-    
+
+
+    <script src="/public/js/scripts.js"></script> 
+
     <script src="/public/js/scripts.js"></script>  
 </body>  
 </html>
