--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,24 +39,24 @@ nav a:hover {
 
 main{
     padding: 20px;  
-    padding-top: 5em;
+    /* padding-top: 5em; */
     text-align: left;
 }
 
-/* footer{
+footer{
     text-align: center;  
-    margin-top: 20px;  
+    margin-top: 10em;
     padding: 10px;  
-    background-color: #333;  
+    background-color: #404040;  
     color: white;  
     top: 90%;
-} */
+}
 
 
 /* مقالات */
 
 #containers1{
-    padding-top: 10em;
+    padding-top: 8em;
 }
 
 .container {  
@@ -66,7 +66,7 @@ main{
   
   h1 {  
     text-align: center;  
-    color: #333;  
+    /* color: #333;   */
   }  
   
   .articles-row {  
