adding a description label

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,18 @@
         </div>  
       </div>  
     </section>
+
+    <div>
+
+        <figure class="">
+
+            <img src="" alt="">
+            <p class="title"> </p>
+            <figcaption class=""></figcaption>
+
+        </figure>
+
+    </div>
       
     
     <footer>
