--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,3 +145,48 @@ footer{
       width: 100%;  
     }  
   }  
+
+
+
+
+.title_label{
+  display: flex;
+  text-align: center;
+  /* flex-grow: initial; */
+  /* flex: content; */
+  margin: 0;
+  margin-top: auto;
+}
+
+.items{
+  background-color: #fff;
+  border-radius: 7px;
+  /* padding-bottom: ; */
+  gap: 10px;
+}
+
+.items:hover{
+  transform: translateY(-5px);
+  transition-duration: 0.4s;
+}
+
+.items_img{
+  min-width: 10em;
+  max-width: 20em;
+  min-height: 10em;
+  max-height: 20em;
+  border-radius: 5px;
+}
+
+.items_title_EN{
+  font-size: x-large;
+  font-family: tahoma, sans-serif;
+  margin: 1em;
+  text-align: center;
+}
+
+.items_caption_EN{
+  font-size: 17px;
+  margin-bottom: 1em;
+}
+
