--- a/views/index.html
+++ b/views/index.html
@@ -28,13 +28,17 @@
       </div>  
     </section>
 
-    <div>
 
-        <figure class="">
+    <span style="color: burlywood; margin-top: 10em; margin-bottom: 10em; font-size: x-large;"> Advertise Label </span>
+    <div class="title_label">
 
-            <img src="" alt="">
-            <p class="title"> </p>
-            <figcaption class=""></figcaption>
+        
+
+        <figure class="items">
+
+            <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
+            <p class="items_title_EN"><strong>minecraft learn</strong></p>
+            <figcaption class="items_caption_EN">can you learn "how to play minecraft"</figcaption>
 
         </figure>
 
