--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,23 +151,29 @@ footer{
 
 .title_label{
   display: flex;
+  flex-wrap: wrap;
   text-align: center;
-  /* flex-grow: initial; */
-  /* flex: content; */
   margin: 0;
   margin-top: auto;
+  justify-content: center;
 }
 
 .items{
   background-color: #fff;
   border-radius: 7px;
-  /* padding-bottom: ; */
-  gap: 10px;
+  margin: 1em;
+  text-decoration: none !important;
+  
 }
 
 .items:hover{
   transform: translateY(-5px);
   transition-duration: 0.4s;
+}
+
+figure{
+  padding: 0;
+  margin: 0;
 }
 
 .items_img{
@@ -183,10 +189,12 @@ footer{
   font-family: tahoma, sans-serif;
   margin: 1em;
   text-align: center;
+  color: black;
 }
 
 .items_caption_EN{
   font-size: 17px;
   margin-bottom: 1em;
+  color: #1c1c1c;
 }
 
