--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,8 @@
 
     <section id="containers1">
     <div class="container">  
-        <h1>آخرین مقالات</h1>  
+        <h1>Advertise</h1>  
+        <hr>
         <div class="articles-row" id="articlesRow">  
           <!-- مقالات با JS اضافه می شوند -->  
         </div>  
@@ -29,18 +30,121 @@
     </section>
 
 
-    <span style="color: burlywood; margin-top: 10em; margin-bottom: 10em; font-size: x-large;"> Advertise Label </span>
+    <div style="margin-top: 3em; margin-bottom: 1em; text-align: center;">
+       <strong> <span style="color: #111; margin-top: 10em; margin-bottom: 10em; font-size: x-large;"> Articles </span> </strong>
+    </div>
+    <hr>
     <div class="title_label">
 
         
-
-        <figure class="items">
-
-            <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
-            <p class="items_title_EN"><strong>minecraft learn</strong></p>
-            <figcaption class="items_caption_EN">can you learn "how to play minecraft"</figcaption>
-
+        <a href="#" class="items">
+        <figure >
+            
+                <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
+                <p class="items_title_EN"><strong>minecraft learn</strong></p>
+                <figcaption class="items_caption_EN">can you learn "how to play minecraft"</figcaption>
+            
         </figure>
+        </a>
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+        
+        
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <!-- <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a>
+
+
+        <a href="">
+        <figure class="items">
+            
+                <img src="" alt="" class="items_img">
+                <p class="items_title_EN"><strong></strong></p>
+                <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+        </a> -->
 
     </div>
       
