--- a/views/index.html
+++ b/views/index.html
@@ -11,11 +11,19 @@
 </head>  
 <body>  
     <header>  
-        <h1>CityWar</h1>  
+        <div class="header_main">
+                <div class="header">
+          <a href="./signup.html">signup</a>  
+            <a href="./login.html">Login</a>
+        </div>
+        <div class="header">
+        <h1>CityWar</h1>
+        </div>
+        </div>
         <nav>  
-            <a href="signup.html">signup</a>  
-            <a href="login.html">Login</a>  
-            <a href="store.html">Store</a>  
+            <a href="./store.html">Store</a> 
+            <a href="./Office.html">Office</a> 
+            <a href="./">Investment</a>
         </nav>  
     </header>  
 
@@ -34,7 +42,7 @@
        <strong> <span style="color: #111; margin-top: 10em; margin-bottom: 10em; font-size: x-large;"> Articles </span> </strong>
     </div>
     <hr>
-    <div class="title_label">
+    <div id="title_label">
 
         
         <a href="#" class="items">
@@ -157,7 +165,7 @@
         <p>CityWar server brings you the best experience.</p>
     </main>  
         <p>&copy;2025 CityWar. All rights reserved.</p>
-    </footer>  
+    </footer>
 
 
     <script src="/public/js/scripts.js"></script> 
