--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,8 @@
     <header>  
         <div class="header_main">
                 <div class="header">
-          <a href="./signup.html">signup</a>  
-            <a href="./login.html">Login</a>
+          <!-- <a href="./signup.html">signup</a>   -->
+            <a href="./login.html">Login/Signup</a>
         </div>
         <div class="header">
         <h1>CityWar</h1>
