--- a/views/Office.html
+++ b/views/Office.html
@@ -5,29 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citywar | Office</title>
 
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/public/css/Office.css">
 
 </head>
 <body>
 
     <header>  
-        <h1>CityWar</h1>  
+        <div class="header_main">
+
+            <div class="header">
+        <h1>CityWar</h1>
+        </div>
+
+                <div class="header">
+                    <div class="search-box">
+
+            <form role="searchbox" method="get">
+                <search>
+                    <label for="search">
+                        <input type="search" name="" id="search" onkeyup="searchProducts(this)">
+                        <button type="submit" role="search">🔎</button>
+                    </label>
+                </search>
+            </form>
+    
+        
+        </div> 
         <nav>  
             <a href="./index.html">Main Menu</a>
+            <!-- <a href=""></a> -->
+
+            
         </nav>  
     </header>
 
 
+     
+
 
     <div id="title_label">
+
     <a href="">
         <figure class="items">
-            
-                <img src="" alt="" class="items_img">
-                <p class="items_title_EN"><strong></strong></p>
-                <figcaption class="items_caption_EN"></figcaption>
+            <img src="/public/images/Default_citywar_minecraft_server_NFT_2.jpg" alt="Real Estate" class="items_img">
+            <p class="items_title_EN"><strong>Real Estate</strong></p>
+            <figcaption class="items_caption_EN">Land Trading</figcaption>
         </figure>
-        </a>
+    </a>
+
+
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/citywar-Job-finding.jpg" alt="Job Search" class="items_img">
+            <p class="items_title_EN"><strong>Job Search</strong></p>
+            <figcaption class="items_caption_EN">Find a good job or post a job ad.</figcaption>
+        </figure>
+    </a>
+
+
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/citywar-farming.jpg" alt="" class="items_img">
+            <p class="items_title_EN"><strong>Farming</strong></p>
+            <figcaption class="items_caption_EN">you can create a farm land in server</figcaption>
+        </figure>
+    </a>
+
+
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
+
+
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
+
+
+    <a href="">
+        <figure class="items">
+            <img src="" alt="" class="items_img">
+            <p class="items_title_EN"><strong></strong></p>
+            <figcaption class="items_caption_EN"></figcaption>
+        </figure>
+    </a>
     
     </div>
 
