setted search panel and search text

--- a/views/Office.html
+++ b/views/Office.html
@@ -46,6 +46,7 @@
 
     <div id="title_label">
 
+    <div class="selection" data-category="Real estate">
     <a href="">
         <figure class="items">
             <img src="/public/images/Default_citywar_minecraft_server_NFT_2.jpg" alt="Real Estate" class="items_img">
@@ -53,8 +54,9 @@
             <figcaption class="items_caption_EN">Land Trading</figcaption>
         </figure>
     </a>
+    </div>
 
-
+    <div class="selection" data-category="Job Search">
     <a href="">
         <figure class="items">
             <img src="/public/images/citywar-Job-finding.jpg" alt="Job Search" class="items_img">
@@ -62,8 +64,10 @@
             <figcaption class="items_caption_EN">Find a good job or post a job ad.</figcaption>
         </figure>
     </a>
+    </div>
 
 
+    <div class="selection" data-category="Farming">
     <a href="">
         <figure class="items">
             <img src="/public/images/citywar-farming.jpg" alt="" class="items_img">
@@ -71,8 +75,10 @@
             <figcaption class="items_caption_EN">you can create a farm land in server</figcaption>
         </figure>
     </a>
+    </div>
 
 
+    <div class="selection" data-category="">
     <a href="">
         <figure class="items">
             <img src="" alt="" class="items_img">
@@ -80,8 +86,10 @@
             <figcaption class="items_caption_EN"></figcaption>
         </figure>
     </a>
+    </div>
 
 
+    <div class="selection" data-category="">
     <a href="">
         <figure class="items">
             <img src="" alt="" class="items_img">
@@ -89,8 +97,10 @@
             <figcaption class="items_caption_EN"></figcaption>
         </figure>
     </a>
+    </div>
 
 
+    <div class="selection" data-category="">
     <a href="">
         <figure class="items">
             <img src="" alt="" class="items_img">
@@ -98,6 +108,8 @@
             <figcaption class="items_caption_EN"></figcaption>
         </figure>
     </a>
+    </div>
+    
     
     </div>
 
@@ -106,6 +118,7 @@
     </footer>
 
 
+    <script src="/public/js/Office.js"></script>
     
 </body>
 
