Search box edited

--- a/views/Office.html
+++ b/views/Office.html
@@ -25,7 +25,7 @@
                 <search>
                     <label for="search">
                         <input type="search" name="" id="search" onkeyup="searchProducts(this)">
-                        <button type="submit" role="search">🔎</button>
+                        <button type="submit" role="search">🔄</button>
                     </label>
                 </search>
             </form>
@@ -46,12 +46,12 @@
 
     <div id="title_label">
 
-    <div class="selection" data-category="Real estate">
+    <div class="selection" data-category="Real Estate">
     <a href="">
         <figure class="items">
             <img src="/public/images/Default_citywar_minecraft_server_NFT_2.jpg" alt="Real Estate" class="items_img">
             <p class="items_title_EN"><strong>Real Estate</strong></p>
-            <figcaption class="items_caption_EN">Land Trading</figcaption>
+            <figcaption class="items_caption_EN">Buy and sell real estate.</figcaption>
         </figure>
     </a>
     </div>
@@ -72,7 +72,29 @@
         <figure class="items">
             <img src="/public/images/citywar-farming.jpg" alt="" class="items_img">
             <p class="items_title_EN"><strong>Farming</strong></p>
-            <figcaption class="items_caption_EN">you can create a farm land in server</figcaption>
+            <figcaption class="items_caption_EN">you can create a farm land in server.</figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="NFT">
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/NFT-icon.jpg" alt="" class="items_img">
+            <p class="items_title_EN"><strong>NFT</strong></p>
+            <figcaption class="items_caption_EN">Get NFT Card And Trade With NFTs.</figcaption>
+        </figure>
+    </a>
+    </div>
+
+
+    <div class="selection" data-category="School">
+    <a href="">
+        <figure class="items">
+            <img src="/public/images/Citywar-School.jpg" alt="" class="items_img">
+            <p class="items_title_EN"><strong>School</strong></p>
+            <figcaption class="items_caption_EN">Enroll in a training course at school and get a certificate.</figcaption>
         </figure>
     </a>
     </div>
@@ -88,28 +110,6 @@
     </a>
     </div>
 
-
-    <div class="selection" data-category="">
-    <a href="">
-        <figure class="items">
-            <img src="" alt="" class="items_img">
-            <p class="items_title_EN"><strong></strong></p>
-            <figcaption class="items_caption_EN"></figcaption>
-        </figure>
-    </a>
-    </div>
-
-
-    <div class="selection" data-category="">
-    <a href="">
-        <figure class="items">
-            <img src="" alt="" class="items_img">
-            <p class="items_title_EN"><strong></strong></p>
-            <figcaption class="items_caption_EN"></figcaption>
-        </figure>
-    </a>
-    </div>
-    
     
     </div>
 
