--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
 
         
         <a href="#" class="items">
-        <figure >
+        <figure>
             
                 <img src="/public/images/citywar-icon.jpg" alt="" class="items_img">
                 <p class="items_title_EN"><strong>minecraft learn</strong></p>
@@ -55,8 +55,8 @@
         </figure>
         </a>
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -65,8 +65,8 @@
         </a>
         
         
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -75,8 +75,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -85,8 +85,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -95,8 +95,8 @@
         </a>
 
 
-        <!-- <a href="">
-        <figure class="items">
+        <!-- <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -105,8 +105,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -115,8 +115,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -125,8 +125,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -135,8 +135,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
@@ -145,8 +145,8 @@
         </a>
 
 
-        <a href="">
-        <figure class="items">
+        <a href="" class="items">
+        <figure>
             
                 <img src="" alt="" class="items_img">
                 <p class="items_title_EN"><strong></strong></p>
