worked on investment page

--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
         <nav>  
             <a href="./store.html">Store</a> 
             <a href="./Office.html">Office</a> 
-            <a href="./">Investment</a>
+            <a href="./investment.html">Investment</a>
         </nav>  
     </header>  
 
