--- a/views/investment.html
+++ b/views/investment.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citywar | Imvestment</title>
+    <link rel="shortcut icon" href="/public/images/citywar-icon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="/public/css/investment.css">
+
 </head>
 <body>
 
+    <header>  
+        <div class="header_main">
+
+            <div class="header">
+        <h1>CityWar</h1>
+        </div>
+
+                <div class="header">
+                    <div class="search-box">
+
+            <form role="searchbox" method="get">
+                <search>
+                    <label for="search">
+                        <input type="search" name="" id="search" onkeyup="searchProducts(this)">
+                        <button type="submit" role="search">🔄</button>
+                    </label>
+                </search>
+            </form>
     
+        
+        </div> 
+        <nav>  
+            <a href="./index.html">Main Menu</a>
+            <!-- <a href=""></a> -->
+
+            
+        </nav>  
+    </header>
+
+
+    
+
+
+    <footer>
+        <p>&copy;2025 CityWar. All rights reserved.</p>
+    </footer>
+
+
+    <script src="/public/js/Office.js"></script>
     
 </body>
 </html>
