--- a/views/Office.html
+++ b/views/Office.html
@@ -13,25 +13,30 @@
 
     <header>  
         <div class="header_main">
+        
+            <div class="header">
+                <h1>CityWar</h1>
+            </div>
+        
+            <div class="header">
+                <div class="search-box">
+        
+                    <form role="searchbox" method="get">
+                        <search>
+                            <label for="search">
+                                <input type="search" name="Search" id="search" onkeyup="searchProducts(this)">
+                                <button type="submit" role="search">🔄</button>
+                            </label>
+                        </search>
+                    </form>
+                </div>
+            </div>
 
             <div class="header">
-        <h1>CityWar</h1>
+            <a href="./login.html">Login/Signup</a>
+        </div>
         </div>
 
-                <div class="header">
-                    <div class="search-box">
-
-            <form role="searchbox" method="get">
-                <search>
-                    <label for="search">
-                        <input type="search" name="" id="search" onkeyup="searchProducts(this)">
-                        <button type="submit" role="search">🔄</button>
-                    </label>
-                </search>
-            </form>
-    
-        
-        </div> 
         <nav>  
             <a href="./index.html">Main Menu</a>
             <!-- <a href=""></a> -->
