--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,9 @@ header h1 {
   text-align: end;
   margin-right: 1em;
   margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header a{
@@ -42,6 +45,7 @@ header a{
     text-decoration: none;  /* حذف زیرخط لینک */
     margin: 0 10px;  
     transition: color 0.5s;  /* انیمیشن رنگ */
+    font-size: 15px;
 }
 
 nav{
