--- a/views/store.html
+++ b/views/store.html
@@ -12,7 +12,7 @@
 </head>  
 <body>  
     <header>  
-        <h1>CityWar Shop</h1>  
+        <h1>CityWar</h1>  
         <nav>  
             <a href="index.html">Main Menu</a>  
             <a href="profile.html">Profile</a>  
@@ -61,7 +61,7 @@
             <form role="searchbox" method="get">
                 <search>
                     <label for="search">
-                        <input type="search" name="" id="search" onkeyup="searchProducts(this)">
+                        <input type="search" name="" id="search" placeholder="Search" onkeyup="searchProducts(this)">
                         <button type="submit" role="search">🔎</button>
                     </label>
                 </search>
